--- a/assets/sass/atoms/_alias.sass
+++ b/assets/sass/atoms/_alias.sass
@@ -28,3 +28,5 @@ $action-primary-default: $maelstrom-500
 $action-primary-hover: $maelstrom-400
 $action-primary-active: $maelstrom-600
 $action-primary-focus: $maelstrom-200
+
+$action-locked-default: $oblivion-500
