--- a/assets/sass/components/_text-styles.sass
+++ b/assets/sass/components/_text-styles.sass
@@ -116,6 +116,9 @@ body
   font-family: gt-america-medium
 
 .label
+  padding-top: 2px
+  padding-bottom: 2px
+
   font-family: gt-america-mono-medium
   font-size: 16px
   line-height: 24px
@@ -123,6 +126,9 @@ body
   text-transform: uppercase
 
 .caption
+  padding-top: 1px
+  padding-bottom: 3px
+
   font-family: gt-america-mono-medium
   font-size: 13px
   line-height: 24px
